<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@android:color/darker_gray"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@android:color/darker_gray"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Movie"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/Title" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@android:color/darker_gray"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/Search"
                android:layout_width="110dp"
                android:layout_height="60dp"
                android:onClick="GetData"
                android:text="@string/Search" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@android:color/darker_gray"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/MovieTitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="25sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="320dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/Image"
                android:layout_width="210dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/Image" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/Year"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:text="@string/Year"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/YearL"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:gravity="top"
                        android:text="@string/WR"
                        android:textSize="17sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/Runtime"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:text="@string/Runtime"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/RuntimeL"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:gravity="top"
                        android:text="@string/WR"
                        android:textSize="17sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/Genre"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:text="@string/Genre"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/GenreL"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:gravity="top"
                        android:text="@string/WR"
                        android:textSize="17sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/Director"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:text="@string/Director"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/DirectorL"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:gravity="top"
                        android:text="@string/WR"
                        android:textSize="17sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/Actors"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:text="@string/Actors"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/ActorsL"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:gravity="top"
                        android:text="@string/WR"
                        android:textSize="17sp" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Plot"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/Plot"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/PlotL"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/WR"
                android:textSize="17sp"/>
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>